tests/vertical-slice/accept/indirect_enum_actor_message_definition.hew
indirect enum Tree {
    Leaf(i64);
    Node(Tree, Tree);
}

actor Sink {
    receive fn take(t: Tree) {
        let _ = t;
    }
}

fn main() -> i64 {
    0
}
