tests/vertical-slice/reject/gen_capture_whole_value_fn_arg.hew
fn take(value: Vec<i64>) -> Vec<i64> {
    value
}

fn main() {
    let items: Vec<i64> = Vec::new();
    let _g = gen {
        let _stolen = take(items);
        yield 0;
    };
}
